--- a/index.html
+++ b/index.html
@@ -26,12 +26,7 @@
 			<h2 id="why">Why Play?</h2>
 			<p>This game will improve your memory. Its fun because there is an inherit challenge in any memory game, however this is one that most of us can remember from our childhood. So work that memory muscle and reconnect with your childhood, with this fun game!</p>
 
-			<div>
-				<img src="images/back.png" alt="Queen of Diamonds">
-				<img src="images/back.png" alt="Queen of Hearts">
-				<img src="images/back.png" alt="King of Diamonds">
-				<img src="images/back.png" alt="King of Hearts">
-			</div>
+			<div id="game-board" class="board clearfix"></div>
 
 			<p><a href="https://twitter.com/jaredpleva">Follow me</a>on Twitter.</p>
 		</main>
